--- a/index.html
+++ b/index.html
@@ -1,95 +1,47 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>B & M Reparaciones</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(to right, #74ebd5, #ACB6E5);
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .card {
-      background-color: #ffffff;
-      border-radius: 25px;
-      padding: 40px 30px;
-      text-align: center;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-      max-width: 450px;
-      width: 90%;
-    }
-    h1 {
-      color: #ff6f61;
-      margin-bottom: 20px;
-      font-size: 32px;
-    }
-    p {
-      font-size: 18px;
-      color: #333;
-      margin: 15px 0;
-    }
-    .contact {
-      font-size: 20px;
-      font-weight: bold;
-      color: #28a745;
-      margin-top: 20px;
-    }
-    .services {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 15px;
-      margin-top: 20px;
-    }
-    .service-item {
-      background-color: #f7f7f7;
-      border-radius: 15px;
-      padding: 10px 15px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-weight: bold;
-      color: #555;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 25px;
-      padding: 12px 25px;
-      background-color: #ff6f61;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 12px;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-    .btn:hover {
-      background-color: #e65550;
-    }
-    .service-item i {
-      color: #ff6f61;
-    }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h1>B & M Reparaciones</h1>
-    <p>Realizamos reparaciones en general en CABA y alrededores</p>
-    <div class="services">
-      <div class="service-item"><i class="fas fa-tools"></i> Electricidad</div>
-      <div class="service-item"><i class="fas fa-wrench"></i> Plomería</div>
-      <div class="service-item"><i class="fas fa-paint-roller"></i> Pintura</div>
-      <div class="service-item"><i class="fas fa-couch"></i> Muebles</div>
-    </div>
-    <p class="contact">📞 3774-433268</p>
-    <a class="btn" href="mailto:alejandrombelyin@gmail.com">Enviar correo</a>
-  </div>
-</body>
-</html>
+<!DOCTYPE html><html lang="es"><head>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>B & M Reparaciones — Reparaciones en general en CABA y alrededores</title>
+<meta name="description" content="B & M Reparaciones: electricidad, plomería, pintura y mantenimiento en CABA y alrededores. WhatsApp 3774 433268."/>
+<meta name="theme-color" content="#0b4fb3"/><link rel="icon" href="assets/favicon.ico"/><link rel="manifest" href="manifest.json"/>
+<meta property="og:title" content="B & M Reparaciones"/><meta property="og:description" content="Reparaciones en general — CABA y alrededores"/><meta property="og:type" content="website"/>
+<meta property="og:image" content="assets/og-cover.png"/><link rel="stylesheet" href="styles.css"/><script defer src="script.js"></script>
+<script>if('serviceWorker'in navigator){navigator.serviceWorker.register('/sw.js');}</script>
+</head><body>
+<a class="whatsapp-fab" href="https://wa.me/543774433268" target="_blank" aria-label="WhatsApp">✆</a>
+<nav class="nav"><div class="container nav-inner"><a class="logo" href="#inicio"><img src="assets/logo.svg" alt="B & M Reparaciones logo"/><span>B & M Reparaciones</span></a>
+<div id="menuLinks" class="links"><a href="#servicios">Servicios</a><a href="#galeria">Galería</a><a href="#opiniones">Opiniones</a><a href="#faq">Preguntas</a><a href="#contacto" class="cta">Contacto</a></div>
+<button id="menuBtn" aria-label="Menú" style="display:none">☰</button></div></nav>
+<header id="inicio" class="hero"><div class="container"><h1>B & M Reparaciones</h1><p>Reparaciones en general para hogares y departamentos en CABA y alrededores — rápidos, confiables y con garantía.</p>
+<div class="badges"><span class="badge">Atención por WhatsApp</span><span class="badge">Trabajos con factura</span><span class="badge">Garantía de mano de obra</span></div>
+<div class="buttons"><a class="btn btn-light" href="https://wa.me/543774433268" target="_blank">Pedir presupuesto</a><a class="btn btn-outline" href="#servicios">Ver servicios</a></div>
+</div></header>
+<main>
+<section id="sobre"><div class="container"><h2>Quiénes somos</h2><p class="lead">En <strong>B & M Reparaciones</strong> hacemos mantenimiento y arreglos integrales. Nos enfocamos en calidad, prolijidad y cumplir en tiempo y forma.</p></div></section>
+<section id="servicios"><div class="container"><h2>Servicios</h2><div class="grid">
+<article class="card"><img class="icon" src="assets/electricidad.svg" alt="Electricidad"/><h3>Electricidad</h3><p>Instalaciones, reparación de cortocircuitos, tableros, tomas y luminarias.</p></article>
+<article class="card"><img class="icon" src="assets/plomeria.svg" alt="Plomería"/><h3>Plomería</h3><p>Fugas, cambio de griferías, sifones, destapaciones simples y cañerías.</p></article>
+<article class="card"><img class="icon" src="assets/pintura.svg" alt="Pintura"/><h3>Pintura</h3><p>Pintura interior/exterior, enduido, reparación de humedad y terminaciones.</p></article>
+<article class="card"><img class="icon" src="assets/herramientas.svg" alt="Otros trabajos"/><h3>Otros trabajos</h3><p>Mantenimiento general del hogar y consorcio según necesidad.</p></article>
+</div></div></section>
+<section id="galeria"><div class="container"><h2>Galería</h2><p class="lead">Reemplazá los cuadros con tus fotos.</p><div class="gallery"><div class="ph">Foto 1</div><div class="ph">Foto 2</div><div class="ph">Foto 3</div><div class="ph">Foto 4</div></div></div></section>
+<section id="opiniones"><div class="container"><h2>Opiniones</h2><div class="grid">
+<div class="card"><p class="quote">“Llegaron a horario y dejaron todo impecable.”</p><p class="small">— Cliente de Caballito</p></div>
+<div class="card"><p class="quote">“Precio claro y trabajo prolijo. Recomendados.”</p><p class="small">— Cliente de Palermo</p></div>
+<div class="card"><p class="quote">“Solucionaron una fuga en el día.”</p><p class="small">— Cliente de Almagro</p></div>
+</div></div></section>
+<section id="faq"><div class="container"><h2>Preguntas frecuentes</h2><div class="faq">
+<details><summary>¿Trabajan fines de semana?</summary><p>Sí, con coordinación previa por WhatsApp.</p></details>
+<details><summary>¿Dan garantía?</summary><p>Sí, sobre mano de obra y materiales utilizados.</p></details>
+<details><summary>¿Cobran visita?</summary><p>La visita se descuenta del trabajo si se aprueba el presupuesto.</p></details>
+</div></div></section>
+<section id="contacto" class="contact"><div class="container"><h2>Contacto</h2><div class="row">
+<div class="card"><form id="contactForm"><label for="name">Nombre</label><input id="name" name="name" required placeholder="Tu nombre"/>
+<label for="phone">Teléfono</label><input id="phone" name="phone" required placeholder="11 xxxx xxxx"/>
+<label for="message">Consulta</label><textarea id="message" name="message" rows="4" required placeholder="Contanos qué necesitás"></textarea>
+<button type="submit">Enviar por WhatsApp</button><p class="notice">O escribinos a <a href="mailto:alejandrombelyin@gmail.com">alejandrombelyin@gmail.com</a></p></form></div>
+<div class="card"><h3>Datos de contacto</h3><p><strong>Tel / WhatsApp:</strong> <a href="https://wa.me/543774433268" target="_blank">3774 433268</a></p>
+<p><strong>Email:</strong> <a href="mailto:alejandrombelyin@gmail.com">alejandrombelyin@gmail.com</a></p><p><strong>Zona:</strong> CABA y alrededores</p><p class="small">Podés añadir un mapa de Google Maps incrustado aquí si tenés dirección.</p></div>
+</div></div></section>
+</main>
+<footer><div class="container"><p>© 2025 B & M Reparaciones. Todos los derechos reservados.</p><p class="small">Sitio folleto. Optimizado para compartir en Instagram y WhatsApp.</p></div></footer>
+</body></html>
